# markit-mistral

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
.context/: ideas.md  plan.md  research.md  scratch_history.md
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  publish.yml  release.yml
.rules/: ci_cd.md  code_review.md  documentation.md  git.md  python.md  self_improve.md  serena_mcp.md  testing.md
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
docs/: API.md  CLI.md  index.html
examples/: basic_usage.py
ref_examples/: structured_ocr.ipynb
src/markit_mistral/: __init__.py  __main__.py  cli.py  config.py  converter.py  exceptions.py  file_processor.py  markdown_formatter.py  ocr_processor.py  output_manager.py
src/markit_mistral/web/: README.md  debug.html  index.html  modern_debug.html
src/markit_mistral/web/static/: main.js  markit_web.py
tests/: __init__.py  test_cli.py  test_config.py  test_converter.py  test_markdown_formatter.py  test_ocr_processor.py  test_output_manager.py
